--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "hy-algokit": "^1.4.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
