--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "node": "ts-node"
+    "node": "ts-node",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
