feat: 完成双端队列和对应测试用例，并配置jest debug

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "esModuleInterop": true,
     "baseUrl": ".",
     "paths": {
-      "@src/*": ["src/*"],
-      "@stack/*": ["src/01_Stack/*"],
+      // "@src/*": ["src/*"],
+      // "@stack/*": ["src/01_Stack/*"],
     }
   },
   "include": ["./src/**/*"],
