--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^18.15.0",
     "babel-jest": "^29.5.0",
     "jest": "^29.5.0",
+    "puppeteer": "^19.8.3",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   }
